--- a/doc/description_rst_ports.adoc
+++ b/doc/description_rst_ports.adoc
@@ -5,5 +5,5 @@ include::attributes.adoc[]
 В данном блоке используются следующие сигналы сброса:
 
 * PRESETn +
-Активный уровень: 0
+Активный уровень: 0 +
 Сбрасывает всю логику блока.
